solve problem with url bar and vh on mobile

--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -5,6 +5,7 @@
   left: 20px;
   padding: 20px 0;
   height: calc(100vh - 190px);
+  height: calc(var(--vh, 1vh) * 100 - 190px);
   width: calc(100vw - 40px);
   background-color: white;
   border-radius: $border-radius;
@@ -23,8 +24,6 @@
   }
 
   &--short {
-    height: calc(100vh - 190px);
-
     @media (min-width: $screen-s) {
       height: 238px;
       top: 205px;
